Add SwiftPrivateMetadataExtras module
This module essentially adds a single method,
applyFields(of:options:callback:), which walks all the fields of a struct,
enum, or class type and calls `callback` with the name, offset, and type
of each field. `callback` can perform any required work, returning `true`
to continue walking fields or `false` to stop immediately.

Add closure type to SwiftShims

Pass closure through to C++ function

Swift closure actually being called from C++ function

Simplify tests a bit

Finish working applyFields functionality

--- a/stdlib/private/CMakeLists.txt
+++ b/stdlib/private/CMakeLists.txt
@@ -10,6 +10,7 @@ if(SWIFT_BUILD_SDK_OVERLAY)
   add_subdirectory(StdlibCollectionUnittest)
   add_subdirectory(SwiftPrivateLibcExtras)
   add_subdirectory(SwiftPrivateThreadExtras)
+  add_subdirectory(SwiftPrivateMetadataExtras)
 
   # NOTE(compnerd) this must come after SwiftPrivateLibcExtras and
   # SwiftPrivateThreadExtras to ensure that the dependency targets are setup in
